Upgrade to Java 14
* Updating the README with new Java version
* Adding more cloning tests
* Make tests throw errors on illegal-access
* Making transient cloning check better
* Fixing the cloning libary to not throw illegal-access warnings
* Upgrading dependencies, Java version